compiler/testData/asJava/lightClasses/compilationErrors/TraitClassObjectField.java
public interface TraitClassObjectField {
    @org.jetbrains.annotations.NotNull
    TraitClassObjectField.Companion Companion;
    @org.jetbrains.annotations.Nullable
    java.lang.String x = "";

    static final class Companion {
        @org.jetbrains.annotations.Nullable
        public static final java.lang.String x = "";
        private static final java.lang.String y;

        private Companion() { /* compiled code */ }
    }
}